# Risk-Aware-RAG

./: README.md  pyproject.toml
configs/: base.yaml  model_llama.yaml  model_qwen.yaml  rag.yaml  safety_judges.yaml  training_meta.yaml
docs/: architecture.md
notebook/: 01_ingestion.ipynb  02_retrieval_debug.ipynb  03_eval.ipynb
prompts/: evidence_filter.jinja  introspection.jinja  refusal_template.jinja  retrieval_gate.jinja
rai_rag/: config.py  logging.py  types.py
rai_rag/eval/: attack_suites.py  metrics.py  reports.py  run_eval.py
rai_rag/introspection/: a  formatter.py  planner.py  trace.py  validators.py
rai_rag/meta/: curriculum.py  outer_loop.py  sampler.py  task_families.py
rai_rag/models/: adapters.py  backbone.py  generation.py  tokenization.py
rai_rag/pipeline/: rai_rag.py  stage1_introspect.py  stage2_retrieve.py  stage3_search.py  stage4_answer.py
rai_rag/rag/: citations.py  corpus.py  evidence_filter.py  gate.py  index.py  query_rewrite.py  retriever.py
rai_rag/reward/: composite.py  preferences.py  process_rm.py
rai_rag/safety/: calibrators.py  doc_scorer.py  judges.py  policies.py
rai_rag/search/: cache.py  node.py  rollout.py  simcts.py
rai_rag/utils/: hashing.py  io.py  parallel.py  seed.py
scripts/: build_corpus.py  build_index.py  demo_chat.py  eval_all.py  generate_dir.py  train_meta.py  train_reward_model.py
tests/: test_doc_filter.py  test_format.py  test_gate.py  test_simcts.py
